Comments added, version info markup tweaked

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -51,7 +51,7 @@
                     </div>
                     <div role="gridcell">
                         <div>
-                            <strong>Version&nbsp;<span id="sfumato-version" role="status"></span></strong>
+                            <strong>Version</strong>&nbsp;<span id="sfumato-version" role="status"></span>
                         </div>
                     </div>
                 </div>
