--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -356,7 +356,7 @@ Hello, World!
                             </span>Base color quads
                         </h1>
                         <p>
-                            Background, foreground, anchor, and headline color quad maps are used to generate the swatches below, including the hex codes. You can completely control the site color scheme from the <em>_config.scss</em> file!
+                            Background, foreground, anchor, and headline color quad maps are used to generate the swatches below, including the hex codes. You can completely control the site color scheme from the <em>_config-colors.scss</em> file.
                         </p>
                     </div>
                 </article>
@@ -477,7 +477,7 @@ Hello, World!
                             </span>Theme color quads
                         </h1>
                         <p>
-                            Background, foreground, anchor, and headline color quad maps are used to generate the swatches below, including the hex codes. You can completely control the site color scheme from the <em>_config.scss</em> file!
+                            Background, foreground, anchor, and headline color quad maps are used to generate the swatches below, including the hex codes. You can completely control the site color scheme from the <em>_config-colors.scss</em> file.
                         </p>
                     </div>
                 </article>
