--- a/styleguide/grids.html
+++ b/styleguide/grids.html
@@ -256,7 +256,7 @@
                         <h3>Gutterless grid in reverse</h3>
                         <p>
                             Useful for layouts where cells need to be in reverse above mobile. If other breakpoints need to also show the cells in the proper order, 
-                            just set <code>flex-direction: row</code> on the <em>[role="grid"]</em>.
+                            just set <code class="language-css">flex-direction: row</code> on the <em>[role="grid"]</em>.
                         </p>
                     </div>
                 </article>
