--- a/styleguide/grids.html
+++ b/styleguide/grids.html
@@ -42,7 +42,7 @@
     <body>
         <header>
             <section id="logo">
-                <div role="grid" data-columns="3" sf-gutters sf-centered>
+                <div role="grid" sf-centered>
                     <div role="gridcell">
                         <img src="images/SFUMATO-mark-color.svg" />
                     </div>
