Flexbox grid hard-gutter option added

--- a/styleguide/grids.html
+++ b/styleguide/grids.html
@@ -259,7 +259,7 @@
                         <h3>Gutterless grid in reverse</h3>
                         <p>
                             Useful for layouts where cells need to be in reverse above mobile. If other breakpoints need to also show the cells in the proper order, 
-                            just set <code class="language-css">flex-direction: row</code> on the <em>[role="grid"]</em>.
+                            just set <code class="language-css">flex-direction: row</code> on the <em>[role="grid"]</em> for those breakpoints.
                         </p>
                     </div>
                 </article>
@@ -487,7 +487,7 @@
                         <h3>Gutters grid in reverse</h3>
                         <p>
                             Useful for layouts where cells need to be in reverse above mobile. If other breakpoints need to also show the cells in the proper order, 
-                            just set <code class="language-css">flex-direction: row</code> on the <em>[role="grid"]</em>.
+                            just set <code class="language-css">flex-direction: row</code> on the <em>[role="grid"]</em> for those breakpoints.
                         </p>
                     </div>
                 </article>
