Removed extra classes on pre tags

--- a/styleguide/grids.html
+++ b/styleguide/grids.html
@@ -134,7 +134,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid"&gt;
                                     &lt;div role="gridcell"&gt;
@@ -205,7 +205,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid"&gt;
                                     &lt;div role="gridcell"&gt;
@@ -220,7 +220,7 @@
                     </div>
                     <div role="gridcell">
                         <h4>SCSS markup</h4>
-                        <pre class="language-scss">
+                        <pre>
                             <code class="language-scss">
                                 #grid-example {
 
@@ -291,7 +291,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div role="grid" data-columns="3" sf-reverse&gt;
                                     &lt;div role="gridcell"&gt;
@@ -387,7 +387,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div role="grid" data-columns="3"&gt;
                                     &lt;div role="gridcell"&gt;
@@ -438,7 +438,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid" data-columns="3" sf-gutters&gt;
                                     &lt;div role="gridcell"&gt;
@@ -453,7 +453,7 @@
                     </div>
                     <div role="gridcell">
                         <h4>SCSS markup</h4>
-                        <pre class="language-scss">
+                        <pre>
                             <code class="language-scss">
                                 #grid-example {
 
@@ -519,7 +519,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div role="grid" data-columns="3" sf-gutters sf-reverse&gt;
                                     &lt;div role="gridcell"&gt;
@@ -601,7 +601,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid" data-columns="3" sf-gutters&gt;
                                     &lt;div role="gridcell"&gt;
@@ -620,7 +620,7 @@
                     </div>
                     <div role="gridcell">
                         <h4>SCSS markup</h4>
-                        <pre class="language-scss">
+                        <pre>
                             <code class="language-scss">
                                 #grid-example {
 
@@ -690,7 +690,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid" data-columns="3" sf-equal-heights sf-gutters&gt;
                                     &lt;div role="gridcell"&gt;
@@ -752,7 +752,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid" data-columns="3" sf-equal-heights sf-centered&gt;
                                     &lt;div role="gridcell"&gt;
@@ -770,7 +770,7 @@
                     </div>
                     <div role="gridcell">
                         <h4>SCSS markup</h4>
-                        <pre class="language-scss">
+                        <pre>
                             <code class="language-scss">
                                 #grid-example {
 
@@ -828,7 +828,7 @@
                 <div role="grid" data-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h4>HTML markup</h4>
-                        <pre class="language-html">
+                        <pre>
                             <code class="language-html">
                                 &lt;div id="grid-example" role="grid" data-columns="3" sf-equal-heights sf-centered&gt;
                                     &lt;div role="gridcell"&gt;
