--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -285,9 +285,13 @@
                 </h1>
                 <article id="code-examples">
                     <section>
-                        <pre><code class="language-markup">&lt;p&gt;
-Hello, World!
-&lt;/p&gt;</code></pre>
+                        <pre>
+                            <code class="language-markup">
+                                &lt;p&gt;
+                                    Hello, World!
+                                &lt;/p&gt;
+                            </code>
+                        </pre>
                         <p>
                             Inline code can look like this: <code class="language-markup">&lt;p&gt;hello&lt;/p&gt;</code>.
                         </p>
