Form styling refactored

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -626,13 +626,19 @@
                                     </div>
                                 </fieldset>
                                 <fieldset error>
-                                    <label>Error input</label>
+                                    <label>
+                                        Error input
+                                        <span validation-message>Your input is invalid. Please try again.</span>
+                                    </label>
                                     <div role="textbox">
                                         <input type="text" placeholder="Text Input" id="error">
                                     </div>
                                 </fieldset>
                                 <fieldset success>
-                                    <label>Valid input</label>
+                                    <label>
+                                        Valid input
+                                        <span validation-message>Good news: your input is valid!</span>
+                                    </label>
                                     <div role="textbox">
                                         <input type="text" placeholder="Text Input" id="success">
                                     </div>
